Remove deprecated/non-performant data structures where possible.
Since we haven't benchmarked our code, just remove uses of LinkedList since
ArrayList is usually faster. Also remove uses of Stack

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=176036337